Fix Navbar z-index

--- a/src/assets/styles/navbar.scss
+++ b/src/assets/styles/navbar.scss
@@ -5,6 +5,7 @@ nav {
   background: $grey-color;
   position: sticky;
   top: 0;
+  z-index: 999;
 
   .nav-content {
     max-width: 1200px;
